fix windows test issues